# RAG-Product-Recommender-Using-LangChain-FAISS-

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
